--- a/IaC/template-iam.yml
+++ b/IaC/template-iam.yml
@@ -1,6 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: iam roles.
 
+Parameters:
+    S3KMSKey:
+        Type: String
+
 Resources:
   LambdaExecutionRole:
       Type: AWS::IAM::Role
