--- a/IaC/template-s3.yml
+++ b/IaC/template-s3.yml
@@ -28,7 +28,6 @@ Resources:
 
   SampleBucketPolicy:
     Type: AWS::S3::BucketPolicy
-    DependsOn: [S3Bucket]
     Properties:
       Bucket: !Ref S3Bucket
       PolicyDocument:
@@ -37,15 +36,11 @@ Resources:
           - Action: 
               - "s3:GetObject"
             Effect: "Allow"
-            Resource: "arn:aws:s3:::kms/*"
+            Resource: !Sub "arn:aws:s3:::${S3Bucket}/*"
             Principal: "*"
-            Condition:
-              StringEquals:
-                "kms:ViaService": !Sub "s3.${AWS::Region}.amazonaws.com"
 
   SampleBucketPolicy2:
     Type: AWS::S3::BucketPolicy
-    DependsOn: [S3Bucketlambda]
     Properties:
       Bucket: !Ref S3Bucketlambda
       PolicyDocument:
@@ -54,8 +49,5 @@ Resources:
           - Action: 
               - "s3:GetObject"
             Effect: "Allow"
-            Resource: "arn:aws:s3:::kms/*"
+            Resource: !Sub "arn:aws:s3:::${S3Bucketlambda}/*"
             Principal: "*"
-            Condition:
-              StringEquals:
-                "kms:ViaService": !Sub "s3.${AWS::Region}.amazonaws.com"
