Integrating automatic deployment

--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -25,12 +25,12 @@ Resources:
             Parameters:
                 S3KMSKey: !GetAtt kms.Outputs.kmsarn
 
-    #lambdas:
-        #Type: "AWS::CloudFormation::Stack"
-        #DependsOn: iam
-        #Properties:
-            #TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-lambdas.yml
-            #Parameters:
-                #LambdaExecutionRole: !GetAtt iam.Outputs.LambdaExecutionRolearn
+    lambdas:
+        Type: "AWS::CloudFormation::Stack"
+        DependsOn: iam
+        Properties:
+            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-lambdas.yml
+            Parameters:
+                LambdaExecutionRole: !GetAtt iam.Outputs.LambdaExecutionRolearn
 
 
