--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -24,6 +24,7 @@ Resources:
             TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-iam.yml
             Parameters:
                 S3KMSKey: !GetAtt kms.Outputs.kmsarn
+                Bucketdata: !GetAtt s3.Outputs.Bucketdata
 
     lambdas:
         Type: "AWS::CloudFormation::Stack"
@@ -32,5 +33,15 @@ Resources:
             TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-lambdas.yml
             Parameters:
                 LambdaExecutionRole: !GetAtt iam.Outputs.LambdaExecutionRolearn
+
+    glue:
+        Type: "AWS::CloudFormation::Stack"
+        DependsOn: 
+            - iam
+            - s3
+        Properties:
+            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-glue.yml
+            Parameters:
+                roleglue: !GetAtt iam.Outputs.glueExecutionRolearn
 
 
