Integrating automatic deployment

--- a/IaC/template-s3.yml
+++ b/IaC/template-s3.yml
@@ -89,6 +89,6 @@ Resources:
 
 Outputs:
   Bucketdata:
-      Value: !GetAtt S3Bucket.Arn
+      Value: !Sub "arn:aws:s3:::${S3Bucketglue}"
       Export:
         Name: Bucketdata
