Integrating automatic deployment

--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -40,7 +40,7 @@ Resources:
             - iam
             - s3
         Properties:
-            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-glue.yml
+            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-glue.yaml
             Parameters:
                 roleglue: !GetAtt iam.Outputs.glueExecutionRolearn
 
