--- a/IaC/template-lambdas.yml
+++ b/IaC/template-lambdas.yml
@@ -14,7 +14,7 @@ Resources:
         Variables:
           S3_BUCKET_NAME: awdataclouders-s3-data-2/Raw/Usa/
       Runtime: python3.9
-      Handler: lambda_function.lambda_handler
+      Handler: lambda_function_COL.lambda_handler
       Role: !Ref LambdaExecutionRole
       Code:
         S3Bucket: awdataclouders-s3-lambda-code-2
@@ -30,7 +30,7 @@ Resources:
         Variables:
           S3_BUCKET_NAME: awdataclouders-s3-data-2/Raw/Col/
       Runtime: python3.9
-      Handler: lambda_function.lambda_handler
+      Handler: lambda_function_USA.lambda_handler
       Role: !Ref LambdaExecutionRole
       Code:
         S3Bucket: awdataclouders-s3-lambda-code-2
