--- a/IaC/template-lambdas.yml
+++ b/IaC/template-lambdas.yml
@@ -19,7 +19,7 @@ Resources:
       Role: !Ref LambdaExecutionRole
       Code:
         S3Bucket: awdataclouders-s3-lambda-code-2
-        S3Key: lambda_function_COL.zip
+        S3Key: lambda_function_USA.zip
       Timeout: 120
       MemorySize: 128
 
@@ -32,7 +32,7 @@ Resources:
           S3_BUCKET_NAME: awdataclouders-s3-data-2
           S3_BUCKET_PATH: Raw/Col/
       Runtime: python3.9
-      Handler: lambda_function_USA.lambda_handler
+      Handler: lambda_function_COL.lambda_handler
       Role: !Ref LambdaExecutionRole
       Code:
         S3Bucket: awdataclouders-s3-lambda-code-2
