Adding step functions

--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -44,4 +44,15 @@ Resources:
             Parameters:
                 roleglue: !GetAtt iam.Outputs.glueExecutionRolearn
 
+    step:
+        Type: "AWS::CloudFormation::Stack"
+        DependsOn: 
+            - iam
+            - lambda
+            - glue
+        Properties:
+            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-step.yaml
+            Parameters:
+                roleglue: !GetAtt iam.Outputs.stepExecutionRolearn
+
 
