--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -48,7 +48,7 @@ Resources:
         Type: "AWS::CloudFormation::Stack"
         DependsOn: 
             - iam
-            - lambda
+            - lambdas
             - glue
         Properties:
             TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-step.yaml
