--- a/IaC/template-step.yaml
+++ b/IaC/template-step.yaml
@@ -48,6 +48,14 @@ Resources:
               "Parameters": {
                 "JobName": "GlueTransform"
               },
+              "Next": "GlueStartJobRunQuality"
+            },
+            "GlueStartJobRunQuality": {
+              "Type": "Task",
+              "Resource": "arn:aws:states:::glue:startJobRun.sync",
+              "Parameters": {
+                "JobName": "GlueQuality"
+              },
               "End": true
             }
           }
