--- a/IaC/template-glue.yaml
+++ b/IaC/template-glue.yaml
@@ -29,3 +29,27 @@ Resources:
         GlueVersion: 3.0
         WorkerType: Standard
         NumberOfWorkers: 1
+
+  rGlueJobDataQuality:
+      Type: AWS::Glue::Job
+      Properties:
+        Command:
+          Name: gluequality
+          PythonVersion: 3
+          ScriptLocation: "s3://awdataclouders-s3-glue-code-2/quality.py"
+        DefaultArguments: {
+          "--job-language": "python",
+          "--job-bookmark-option": "job-bookmark-enable",
+          "--spark-event-logs-path": "s3://awdataclouders-s3-glue-code-2/",
+          "--enable-spark-ui": "true",
+          "--enable-glue-datacatalog": "",
+          "--enable-metrics": ""
+          }
+        ExecutionProperty:
+          MaxConcurrentRuns: 2
+        MaxRetries: 1
+        Name: GlueQuality
+        Role: !Ref roleglue
+        GlueVersion: 3.0
+        WorkerType: Standard
+        NumberOfWorkers: 1
