--- a/IaC/master.yaml
+++ b/IaC/master.yaml
@@ -55,17 +55,17 @@ Resources:
             Parameters:
                 StepExecutionRole: !GetAtt iam.Outputs.stepExecutionRolearn
 
-    #eventbridge:
-    #    Type: "AWS::CloudFormation::Stack"
-    #    DependsOn: 
-    #        - iam
-    #        - step
-    #        - lambdas
-    #    Properties:
-    #        TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-eventbridge.yaml
-    #        Parameters:
-    #            ArnStepFunction: !GetAtt step.Outputs.ArnStepFunction
-    #            RoleEvent: !GetAtt iam.Outputs.EventBridgeRolearn
+    eventbridge:
+        Type: "AWS::CloudFormation::Stack"
+        DependsOn: 
+            - iam
+            - step
+            - lambdas
+        Properties:
+            TemplateURL: https://aw1289001-public-bucket.s3.us-east-1.amazonaws.com/template-eventbridge.yaml
+            Parameters:
+                ArnStepFunction: !GetAtt step.Outputs.ArnStepFunction
+                RoleEvent: !GetAtt iam.Outputs.EventBridgeRolearn
 
 
 
