--- a/IaC/template-eventbridge.yaml
+++ b/IaC/template-eventbridge.yaml
@@ -13,7 +13,7 @@ Resources:
       Name: DailyStepFunctionTrigger
       ScheduleExpression: "cron(0 7 * * ? *)" # Todos los días a las 7 AM UTC
       State: ENABLED
-      Targets:
+      Target:
         - Arn: !Ref ArnStepFunction
           Id: MyFirstEventBridgeRuleId
           RoleArn: !Ref RoleEvent
