--- a/IaC/template-eventbridge.yaml
+++ b/IaC/template-eventbridge.yaml
@@ -13,6 +13,10 @@ Resources:
       Name: DailyStepFunctionTrigger
       ScheduleExpression: "cron(0 7 * * ? *)" # Todos los días a las 7 AM UTC
       State: ENABLED
+      FlexibleTimeWindow: 
+        MaximumWindowInMinutes: 1
+        Mode: OFF
+
       Target:
         Arn: !Ref ArnStepFunction
         RoleArn: !Ref RoleEvent
