Adding eventbridge scheduler

--- a/IaC/template-eventbridge.yaml
+++ b/IaC/template-eventbridge.yaml
@@ -12,7 +12,7 @@ Resources:
     Properties:
       Name: DailyStepFunctionTrigger
       ScheduleExpression: "cron(0 7 * * ? *)" # Todos los días a las 7 AM UTC
-      State: ENABLED
+      State: DISABLED
       FlexibleTimeWindow: 
         Mode: "OFF"
       Target:
